// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentBadge — snapshots > matches snapshot: active badge with dot 1`] = `"<span style="color: rgb(49, 29, 165); background-color: rgb(227, 224, 246); border-color: rgb(182, 174, 224);" title="review-master" class="inline-flex items-center gap-1 px-1.5 py-0.5 rounded text-xs border font-mono max-w-[120px]"><span class="w-1.5 h-1.5 rounded-full bg-emerald-400 shrink-0"></span><span class="truncate">review-master</span></span>"`;

exports[`AgentBadge — snapshots > matches snapshot: inactive badge 1`] = `"<span style="color: rgb(165, 131, 29); background-color: rgb(246, 240, 224); border-color: rgb(224, 211, 174);" title="dev-front-vuejs" class="inline-flex items-center gap-1 px-1.5 py-0.5 rounded text-xs border font-mono max-w-[120px]"><!--v-if--><span class="truncate">dev-front-vuejs</span></span>"`;

exports[`StatusColumn — snapshots > matches snapshot: column with 2 tasks 1`] = `
"<div class="flex flex-col flex-1 min-w-0 bg-surface-primary/50 rounded-xl border transition-colors border-edge-subtle">
  <div class="flex items-center justify-between px-3 py-2.5 border-b border-edge-subtle">
    <div class="flex items-center gap-2">
      <div class="w-2 h-2 rounded-full bg-slate-400"></div><span class="text-xs font-semibold text-content-tertiary uppercase tracking-wider">Todo</span>
    </div><span class="text-xs text-content-subtle bg-surface-secondary px-1.5 py-0.5 rounded">2</span>
  </div><!-- List mode -->
  <div class="flex-1 overflow-y-auto p-2 space-y-2 min-h-0" style="contain: content;">
    <task-card-stub task="[object Object]"></task-card-stub>
    <task-card-stub task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: empty column 1`] = `
"<div class="flex flex-col flex-1 min-w-0 bg-surface-primary/50 rounded-xl border transition-colors border-edge-subtle">
  <div class="flex items-center justify-between px-3 py-2.5 border-b border-edge-subtle">
    <div class="flex items-center gap-2">
      <div class="w-2 h-2 rounded-full bg-slate-400"></div><span class="text-xs font-semibold text-content-tertiary uppercase tracking-wider">Todo</span>
    </div><span class="text-xs text-content-subtle bg-surface-secondary px-1.5 py-0.5 rounded">0</span>
  </div><!-- List mode -->
  <div class="flex-1 overflow-y-auto p-2 space-y-2 min-h-0" style="contain: content;">
    <div class="text-xs text-content-faint text-center py-8">Aucune tâche</div>
  </div>
</div>"
`;

exports[`StatusColumn — snapshots > matches snapshot: in_progress column (drop target) 1`] = `
"<div class="flex flex-col flex-1 min-w-0 bg-surface-primary/50 rounded-xl border transition-colors border-edge-subtle">
  <div class="flex items-center justify-between px-3 py-2.5 border-b border-edge-subtle">
    <div class="flex items-center gap-2">
      <div class="w-2 h-2 rounded-full bg-cyan-400"></div><span class="text-xs font-semibold text-content-tertiary uppercase tracking-wider">In Progress</span>
    </div><span class="text-xs text-content-subtle bg-surface-secondary px-1.5 py-0.5 rounded">1</span>
  </div><!-- List mode -->
  <div class="flex-1 overflow-y-auto p-2 space-y-2 min-h-0" style="contain: content;">
    <task-card-stub task="[object Object]"></task-card-stub>
    <!--v-if-->
  </div>
</div>"
`;

exports[`TabBar — snapshots > matches snapshot: empty tab bar (no tabs) 1`] = `
"<div data-v-3c3dc65a="" class="flex items-stretch border-b border-edge-default bg-surface-primary shrink-0 h-10">
  <!-- Onglet Backlog (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <rect data-v-3c3dc65a="" x="1" y="2" width="4" height="12" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="6" y="2" width="4" height="8" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="11" y="2" width="4" height="5" rx="1.5"></rect>
    </svg><span data-v-3c3dc65a="">Backlog</span>
    <!--v-if-->
  </button><!-- Onglet Stat (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <path data-v-3c3dc65a="" d="M0 11l4-5 3 3 4-6 5 3v5H0z"></path>
    </svg><span data-v-3c3dc65a="">Dashboard</span>
    <!--v-if-->
  </button><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
    </svg></button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container flex items-stretch gap-0.5 px-1.5 flex-1 min-w-0 overflow-x-scroll">
    <!-- Onglets fichiers -->
    <!-- Groupe agent -->
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
    </svg></button><!-- Bouton + WSL --><button data-v-3c3dc65a="" class="flex items-center gap-1.5 px-3 self-center text-sm font-semibold text-violet-700 bg-violet-500/15 hover:bg-violet-500/25 border border-violet-500/40 hover:border-violet-500/60 dark:text-violet-300 dark:border-violet-500/30 dark:hover:border-violet-500/50 rounded transition-all ml-1 mr-2 shrink-0 cursor-pointer" style="height: 28px;" title="Ouvrir un terminal WSL"><span data-v-3c3dc65a="" class="text-base leading-none">+</span><span data-v-3c3dc65a="">WSL</span></button>
  <div data-v-3c3dc65a="" class="w-3 shrink-0"></div>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TabBar — snapshots > matches snapshot: tab bar with one terminal tab 1`] = `
"<div data-v-3c3dc65a="" class="flex items-stretch border-b border-edge-default bg-surface-primary shrink-0 h-10">
  <!-- Onglet Backlog (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <rect data-v-3c3dc65a="" x="1" y="2" width="4" height="12" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="6" y="2" width="4" height="8" rx="1.5"></rect>
      <rect data-v-3c3dc65a="" x="11" y="2" width="4" height="5" rx="1.5"></rect>
    </svg><span data-v-3c3dc65a="">Backlog</span>
    <!--v-if-->
  </button><!-- Onglet Stat (fixe) --><button data-v-3c3dc65a="" class="flex items-center gap-2 px-5 text-sm font-semibold transition-all relative select-none border-r border-edge-subtle shrink-0 text-content-muted hover:text-content-secondary hover:bg-surface-secondary/50"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3.5 h-3.5 shrink-0">
      <path data-v-3c3dc65a="" d="M0 11l4-5 3 3 4-6 5 3v5H0z"></path>
    </svg><span data-v-3c3dc65a="">Dashboard</span>
    <!--v-if-->
  </button><!-- Scroll left arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
    </svg></button><!-- Onglets (scrollable) -->
  <div data-v-3c3dc65a="" class="scroll-container flex items-stretch gap-0.5 px-1.5 flex-1 min-w-0 overflow-x-scroll">
    <!-- Onglets fichiers -->
    <!-- Groupe agent -->
    <div data-v-3c3dc65a="" class="flex items-stretch gap-0.5 shrink-0">
      <!-- Onglet-agent (bouton principal du groupe) --><button data-v-3c3dc65a="" class="relative flex items-center gap-1.5 px-3 text-sm font-semibold transition-all select-none rounded-t shrink-0 cursor-pointer" style="color: rgb(235, 159, 112); background-color: rgb(66, 41, 26);"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-3 h-3 shrink-0 text-violet-500 dark:text-zinc-300">
          <polyline data-v-3c3dc65a="" points="2,5 6.5,8 2,11"></polyline>
          <line data-v-3c3dc65a="" x1="8.5" y1="11" x2="14" y2="11"></line>
        </svg><span data-v-3c3dc65a="" class="opacity-50 select-none">·</span><span data-v-3c3dc65a="" class="truncate max-w-[80px]">dev-front</span><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-2.5 h-2.5 shrink-0 transition-transform duration-150 -rotate-90">
          <path data-v-3c3dc65a="" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
        </svg>
        <!--v-if--><span data-v-3c3dc65a="" class="absolute bottom-0 left-0 right-0 h-[2px]" style="background-color: rgb(235, 159, 112);"></span>
      </button><!-- Sous-onglets session (masqués si groupe collapsé) --><button data-v-3c3dc65a="" class="relative flex items-center gap-1.5 px-4 min-w-[90px] text-sm font-medium transition-all select-none rounded-t shrink-0 cursor-pointer" style="color: rgb(235, 159, 112); background-color: rgb(66, 41, 26);" title="#1"><span data-v-3c3dc65a="" class="font-mono text-xs shrink-0">#1</span>
        <!--v-if--><span data-v-3c3dc65a="" class="flex items-center justify-center w-4 h-4 rounded opacity-40 hover:opacity-100 hover:text-red-400 hover:bg-black/20 transition-all text-xs cursor-pointer ml-4" title="Fermer">✕</span><span data-v-3c3dc65a="" class="absolute bottom-0 left-0 right-0 h-[2px]" style="background-color: rgb(235, 159, 112);"></span>
      </button>
    </div>
  </div><!-- Scroll right arrow --><button data-v-3c3dc65a="" class="flex items-center justify-center w-6 shrink-0 text-content-subtle hover:text-content-secondary hover:bg-surface-secondary/60 transition-colors" style="display: none;"><svg data-v-3c3dc65a="" viewBox="0 0 16 16" fill="currentColor" class="w-3 h-3">
      <path data-v-3c3dc65a="" fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"></path>
    </svg></button><!-- Bouton + WSL --><button data-v-3c3dc65a="" class="flex items-center gap-1.5 px-3 self-center text-sm font-semibold text-violet-700 bg-violet-500/15 hover:bg-violet-500/25 border border-violet-500/40 hover:border-violet-500/60 dark:text-violet-300 dark:border-violet-500/30 dark:hover:border-violet-500/50 rounded transition-all ml-1 mr-2 shrink-0 cursor-pointer" style="height: 28px;" title="Ouvrir un terminal WSL"><span data-v-3c3dc65a="" class="text-base leading-none">+</span><span data-v-3c3dc65a="">WSL</span></button>
  <div data-v-3c3dc65a="" class="w-3 shrink-0"></div>
</div>
<!-- Menu contextuel groupe d'onglets -->
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: critical in_progress task with all badges 1`] = `
"<div class="bg-surface-secondary border border-edge-default rounded-lg p-3 hover:border-content-faint transition-colors cursor-pointer min-h-[120px] flex flex-col" draggable="true">
  <!-- Top row: title + effort/priority -->
  <div class="flex items-start justify-between gap-2 mb-2">
    <div class="flex items-start gap-1.5 flex-1 min-w-0"><span class="mt-1 shrink-0 w-2 h-2 rounded-full bg-cyan-400 animate-pulse" title="Tâche en cours d'exécution" aria-label="Tâche en cours d'exécution"></span>
      <p class="text-sm text-content-primary font-medium leading-snug min-w-0 break-words">Urgent Fix</p>
    </div>
    <div class="flex items-center gap-1 shrink-0">
      <!--v-if--><span class="text-xs font-bold px-1.5 py-0.5 rounded font-mono border bg-red-500/20 text-red-400 border-red-500/30">!!</span><span class="text-xs font-bold px-1.5 py-0.5 rounded font-mono border bg-red-500/20 text-red-400 border-red-500/30">L</span>
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <div class="flex flex-wrap gap-1 mb-2"><span class="text-xs px-1.5 py-0.5 rounded font-mono border" style="color: rgb(123, 197, 234); background-color: rgb(24, 43, 52); border-color: rgb(43, 77, 94);">back-electron</span><!-- Multi-agent avatars (≤3 + overflow badge) -->
    <!-- Fallback: single agent badge when no task_agents rows -->
    <agent-badge-stub name="dev-back" active="false"></agent-badge-stub>
  </div><!-- Footer: dates left, #id right -->
  <div class="flex items-end justify-between gap-2 mt-auto pt-2 border-t border-edge-default/50">
    <div class="flex flex-col gap-0.5">
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Créé</span> 01/01/26 00:00</p>
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Modifié</span> 01/01/26 00:00</p>
    </div><span class="text-xs text-content-faint font-mono shrink-0">#42</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: done task without agent or perimetre 1`] = `
"<div class="bg-surface-secondary border border-edge-default rounded-lg p-3 hover:border-content-faint transition-colors cursor-pointer min-h-[120px] flex flex-col" draggable="false">
  <!-- Top row: title + effort/priority -->
  <div class="flex items-start justify-between gap-2 mb-2">
    <div class="flex items-start gap-1.5 flex-1 min-w-0">
      <!--v-if-->
      <p class="text-sm text-content-primary font-medium leading-snug min-w-0 break-words">Completed Task</p>
    </div>
    <div class="flex items-center gap-1 shrink-0">
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <!--v-if-->
  <!-- Footer: dates left, #id right -->
  <div class="flex items-end justify-between gap-2 mt-auto pt-2">
    <div class="flex flex-col gap-0.5">
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Créé</span> 01/01/26 00:00</p>
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Modifié</span> 01/01/26 00:00</p>
    </div><span class="text-xs text-content-faint font-mono shrink-0">#99</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`TaskCard — snapshots > matches snapshot: minimal todo task 1`] = `
"<div class="bg-surface-secondary border border-edge-default rounded-lg p-3 hover:border-content-faint transition-colors cursor-pointer min-h-[120px] flex flex-col" draggable="true">
  <!-- Top row: title + effort/priority -->
  <div class="flex items-start justify-between gap-2 mb-2">
    <div class="flex items-start gap-1.5 flex-1 min-w-0">
      <!--v-if-->
      <p class="text-sm text-content-primary font-medium leading-snug min-w-0 break-words">Simple Task</p>
    </div>
    <div class="flex items-center gap-1 shrink-0">
      <!--v-if-->
      <!--v-if--><span class="text-xs font-bold px-1.5 py-0.5 rounded font-mono border bg-emerald-500/20 text-emerald-400 border-emerald-500/30">S</span>
    </div>
  </div><!-- Badges: perimeter + agent avatars -->
  <div class="flex flex-wrap gap-1 mb-2"><span class="text-xs px-1.5 py-0.5 rounded font-mono border" style="color: rgb(190, 228, 129); background-color: rgb(41, 50, 26); border-color: rgb(74, 91, 47);">front-vuejs</span><!-- Multi-agent avatars (≤3 + overflow badge) -->
    <!-- Fallback: single agent badge when no task_agents rows -->
    <agent-badge-stub name="dev-front" active="false"></agent-badge-stub>
  </div><!-- Footer: dates left, #id right -->
  <div class="flex items-end justify-between gap-2 mt-auto pt-2 border-t border-edge-default/50">
    <div class="flex flex-col gap-0.5">
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Créé</span> 01/01/26 00:00</p>
      <p class="text-xs text-content-subtle"><span class="text-content-muted">Modifié</span> 01/01/26 00:00</p>
    </div><span class="text-xs text-content-faint font-mono shrink-0">#10</span>
  </div>
</div>
<!--v-if-->"
`;

exports[`ToggleSwitch — snapshots > matches snapshot: disabled state 1`] = `"<button type="button" role="switch" aria-checked="false" disabled="" class="relative shrink-0 w-10 h-5 rounded-full transition-colors duration-200 outline-none focus-visible:ring-2 focus-visible:ring-violet-500 disabled:opacity-40 disabled:cursor-not-allowed bg-surface-tertiary"><span class="absolute top-0.5 left-0.5 w-4 h-4 rounded-full bg-white shadow-sm transition-transform duration-200 translate-x-0"></span></button>"`;

exports[`ToggleSwitch — snapshots > matches snapshot: off state 1`] = `"<button type="button" role="switch" aria-checked="false" class="relative shrink-0 w-10 h-5 rounded-full transition-colors duration-200 outline-none focus-visible:ring-2 focus-visible:ring-violet-500 disabled:opacity-40 disabled:cursor-not-allowed bg-surface-tertiary"><span class="absolute top-0.5 left-0.5 w-4 h-4 rounded-full bg-white shadow-sm transition-transform duration-200 translate-x-0"></span></button>"`;

exports[`ToggleSwitch — snapshots > matches snapshot: on state 1`] = `"<button type="button" role="switch" aria-checked="true" class="relative shrink-0 w-10 h-5 rounded-full transition-colors duration-200 outline-none focus-visible:ring-2 focus-visible:ring-violet-500 disabled:opacity-40 disabled:cursor-not-allowed bg-violet-600"><span class="absolute top-0.5 left-0.5 w-4 h-4 rounded-full bg-white shadow-sm transition-transform duration-200 translate-x-5"></span></button>"`;
